kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: smart-shell-production
spec:
  type: ClusterIP
  selector:
    app: springboot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: springboo 
  selector:
    app: springboot
